Closed Bug 906979 Opened 12 years ago Closed 12 years ago

I cannot force spell checking from right click context menu

Categories

(Core :: Spelling checker, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla26
Tracking Status
firefox23 --- unaffected
firefox24 + verified
firefox25 + verified
firefox26 + verified

People

(Reporter: alice0775, Assigned: ehsan.akhgari)

References

Details

(Keywords: regression)

Attachments

(2 files)

Attached file sample html
Build Identifier: http://hg.mozilla.org/mozilla-central/rev/c8c9bd74cc40 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 ID:20130819030205 See Bug 905176 Comment 10. Steps To Reproduce. 1. Open attached 2. Right click ant Turn on "Check Spelling" 3. Type text and space Actual Results: Spell checking does not work. No red wavy underline appears. Expected Results: Forcing spell checking should be performed for these element.
This seems to affect Gecko 25 and 24 too, but not Gecko 23.
Bug 674927 broke this, because input and textarea elements also use the spellcheck property, so it's no longer possible to force spelling on for them.
Blocks: 674927
Assignee: nobody → ehsan
Hmm, so I debugged this a bit, and it's not clear to me how bug 674927 could have possibly broken this. Alice, do you mind hunting down the regression range for this, please? I want to make sure that I'm not barking up the wrong tree. :-)
Regression window(m-i) Good: http://hg.mozilla.org/integration/mozilla-inbound/rev/069b2adf589e Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20130619 Firefox/24.0 ID:20130619134753 Bad: http://hg.mozilla.org/integration/mozilla-inbound/rev/5b3196ad66f4 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20130619 Firefox/24.0 ID:20130619143654 Pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=069b2adf589e&tochange=5b3196ad66f4 In Local Build, Last Good: 8ed0409f36c2 -3cb61a7d5746-627c03f469d8 First Bad: f26888376433 -3cb61a7d5746-627c03f469d8 Regressed by: f26888376433 Aryeh Gregor — Bug 674927 - Part 3: Make the spellcheck attribute work correctly for contenteditable; r=ehsan
Keywords: regression
Attached patch Patch (v1)Splinter Review
Oh of course...
Attachment #794259 - Flags: review?(roc)
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
Comment on attachment 794259 [details] [diff] [review] Patch (v1) [Approval Request Comment] Bug caused by (feature/regressing bug #): Bug 674927. User impact if declined: See comment 0. Testing completed (on m-c, etc.): Locally Risk to taking this patch (and alternatives if risky): Low risk String or IDL/UUID changes made by this patch: None
Attachment #794259 - Flags: approval-mozilla-beta?
Attachment #794259 - Flags: approval-mozilla-aurora?
Comment on attachment 794259 [details] [diff] [review] Patch (v1) low risk uplift for a Fx24 regression.
Attachment #794259 - Flags: approval-mozilla-beta?
Attachment #794259 - Flags: approval-mozilla-beta+
Attachment #794259 - Flags: approval-mozilla-aurora?
Attachment #794259 - Flags: approval-mozilla-aurora+
(In reply to Alice0775 White from comment #0) > Created attachment 792539 [details] > sample html > > Build Identifier: > http://hg.mozilla.org/mozilla-central/rev/c8c9bd74cc40 > Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 > ID:20130819030205 > > See Bug 905176 Comment 10. > > Steps To Reproduce. > 1. Open attached > 2. Right click ant Turn on "Check Spelling" > 3. Type text and space > > Actual Results: > Spell checking does not work. > No red wavy underline appears. > > Expected Results: > Forcing spell checking should be performed for these element. Alice, can you please help verify this is fixed now :) ? Thanks
(In reply to bhavana bajaj [:bajaj] from comment #10) > (In reply to Alice0775 White from comment #0) > > Created attachment 792539 [details] > > sample html > > > > Build Identifier: > > http://hg.mozilla.org/mozilla-central/rev/c8c9bd74cc40 > > Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 > > ID:20130819030205 > > > > See Bug 905176 Comment 10. > > > > Steps To Reproduce. > > 1. Open attached > > 2. Right click ant Turn on "Check Spelling" > > 3. Type text and space > > > > Actual Results: > > Spell checking does not work. > > No red wavy underline appears. > > > > Expected Results: > > Forcing spell checking should be performed for these element. > > Alice, can you please help verify this is fixed now :) ? Thanks I cannot reproduce the problem anymore on latest Nightly26.0a1. I verified this was fixed. http://hg.mozilla.org/mozilla-central/rev/fb2318875cd4 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 ID:20130823030204
Keywords: checkin-needed
Verified as fixed on: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20100101 Firefox/24.0 (20130826142034) Mozilla/5.0 (Windows NT 6.1; WOW64; rv:25.0) Gecko/20100101 Firefox/25.0 (20130826004002) Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 (20130826190748)
QA Contact: ioana.budnar
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: