Bug 906979 - Make it possible again to force spell checking on text controls with spellcheck=false. r=roc, a=bajaj